--- a/assets/style.css
+++ b/assets/style.css
@@ -48,19 +48,17 @@ nav ul li a:hover {
     background-color: #555;
 }
 
-#aboutMe {
+h1 {
     margin-top: 80px; /* Adjust the margin to create space below the navbar */
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-#aboutMe {
     font-size: 24px;
-    color: #333;
-}
-
-#aboutMe {
-    font-size: 16px;
     color: #555;
 }
+
+
+.project {
+    display: flex;
+}
+
