--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,25 @@ section {
     text-align: justify;
 }
 
+#description, #usage {
+    color: #444;
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+#description {
+    font-weight: bold;
+}
+
+#usage {
+    background-color: #f8f8f8;
+    padding: 10px;
+    border-left: 5px solid #2c3e50;
+    border-radius: 5px;
+}
+
 /* Footer */
 footer {
     background-color: #2c3e50;
