--- a/assets/style.css
+++ b/assets/style.css
@@ -158,33 +158,35 @@ section {
 }
 
 footer {
-    background-color: #ecf0f1; 
-    color: #333;
+    background-color: #2c3e50; 
+    color: white;
     text-align: center;
-    padding: 40px 20px;
+    padding: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); 
+}
+
+footer h1, footer h2 {
+    color: white;
+    margin-bottom: 20px;
 }
 
 footer h1 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #2c3e50; 
+    font-size: 1.5rem;
 }
 
 footer h2 {
     font-size: 1.2rem;
-    margin-bottom: 10px;
 }
 
 footer a {
-    color: #2c3e50;
+    color: white;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 footer a:hover {
-    text-decoration: underline;
+    color: #1abc9c;
 }
 
 
